--- a/CSS/css_animation.css
+++ b/CSS/css_animation.css
@@ -398,25 +398,19 @@ nav,
     min-height: 100vh;
 }
 
-#content-wrap {
-    padding-bottom: 50px;
-}
-
 /* Styles du pied de page */
 footer {
     background-color: rgb(26, 17, 0);
-    position: absolute;
     bottom: 0;
     left: 0;
     width: 100%;
     text-align: center;
-    height: 50px;
 }
 
 .bas_de_page li {
     list-style: none;
-    margin-right: 15px;
-    font-size: 14px;
+    margin-right: 0.9375em;
+    font-size: 0.875em;
     color: rgb(231, 225, 212);
 }
 
@@ -427,7 +421,7 @@ footer {
 .bas_de_page a {
     text-decoration: none;
     color: rgb(231, 225, 212);
-    font-size: 14px;
+    font-size: 0.875em;
 }
 
 .bas_de_page a:hover {
@@ -435,7 +429,7 @@ footer {
 }
 
 .bas_de_page li:last-of-type {
-    margin-right: 50px;
+    margin-right: 3.125em;
 }
 
 .bas_de_page nav,
@@ -443,11 +437,13 @@ footer {
     display: inline-block;
 }
 
+
 /* Style pour le bouton hamburger */
 .hamburger {
     display: none;
     cursor: pointer;
-    z-index: 1;
+    z-index: 100;
+    padding-right: 20px;
 }
 
 .hamburger div {
@@ -460,7 +456,7 @@ footer {
 
 /* Cache la liste de navigation par défaut et affiche le menu hamburger en dessous de 1040px */
 @media (max-width: 1120px) {
-    nav ul {
+    header nav ul {
         display: none;
     }
     .hamburger {
@@ -471,13 +467,14 @@ footer {
 /* Style pour le menu déroulant */
 .nav-active {
     display: block;
+    text-align: center;
     position: absolute;
     background-color: white;
     top: 50px;
     right: 0;
     width: 200px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
+    z-index: 100;
 }
 
 .nav-active li {
@@ -487,4 +484,13 @@ footer {
 
 .nav-active li:hover {
     background-color: #f1f1f1;
+}
+
+@media (max-width: 1400px) {
+    footer ul li, .bas_de_page ul li {
+        display: block;
+        width: 100%;
+        text-align: center;
+        font-size: 15px;
+    }
 }
