--- a/CSS/css_formulaire_m.css
+++ b/CSS/css_formulaire_m.css
@@ -114,29 +114,19 @@ nav,
     min-height: 100vh;
 }
 
-/* Styles pour l'enveloppe de contenu */
-#content-wrap {
-    padding-bottom: 50px;
-}
-
-
-
-
-/* Styles pour le pied de page */
+/* Styles du pied de page */
 footer {
     background-color: rgb(26, 17, 0);
-    position: absolute;
     bottom: 0;
     left: 0;
     width: 100%;
     text-align: center;
-    height: 50px;
 }
 
 .bas_de_page li {
     list-style: none;
-    margin-right: 15px;
-    font-size: 14px;
+    margin-right: 0.9375em;
+    font-size: 0.875em;
     color: rgb(231, 225, 212);
 }
 
@@ -147,7 +137,7 @@ footer {
 .bas_de_page a {
     text-decoration: none;
     color: rgb(231, 225, 212);
-    font-size: 14px;
+    font-size: 0.875em;
 }
 
 .bas_de_page a:hover {
@@ -155,7 +145,7 @@ footer {
 }
 
 .bas_de_page li:last-of-type {
-    margin-right: 50px;
+    margin-right: 3.125em;
 }
 
 .bas_de_page nav,
@@ -284,6 +274,7 @@ legend {
     display: none;
     cursor: pointer;
     z-index: 1;
+    padding-right: 20px;
 }
 
 .hamburger div {
@@ -296,7 +287,7 @@ legend {
 
 /* Cache la liste de navigation par défaut et affiche le menu hamburger en dessous de 1040px */
 @media (max-width: 1120px) {
-    nav ul {
+    header nav ul {
         display: none;
     }
     .hamburger {
@@ -307,6 +298,7 @@ legend {
 /* Style pour le menu déroulant */
 .nav-active {
     display: block;
+    text-align: center;
     position: absolute;
     background-color: white;
     top: 50px;
@@ -323,4 +315,13 @@ legend {
 
 .nav-active li:hover {
     background-color: #f1f1f1;
+}
+
+@media (max-width: 1400px) {
+    footer ul li, .bas_de_page ul li {
+        display: block;
+        width: 100%;
+        text-align: center;
+        font-size: 15px;
+    }
 }
