--- a/CSS/css_histoire.css
+++ b/CSS/css_histoire.css
@@ -107,25 +107,19 @@ nav,
     min-height: 100vh;
 }
 
-#content-wrap {
-    padding-bottom: 50px;
-}
-
 /* Styles du pied de page */
 footer {
     background-color: rgb(26, 17, 0);
-    position: absolute;
     bottom: 0;
     left: 0;
     width: 100%;
     text-align: center;
-    height: 50px;
 }
 
 .bas_de_page li {
     list-style: none;
-    margin-right: 15px;
-    font-size: 14px;
+    margin-right: 0.9375em;
+    font-size: 0.875em;
     color: rgb(231, 225, 212);
 }
 
@@ -136,7 +130,7 @@ footer {
 .bas_de_page a {
     text-decoration: none;
     color: rgb(231, 225, 212);
-    font-size: 14px;
+    font-size: 0.875em;
 }
 
 .bas_de_page a:hover {
@@ -144,13 +138,14 @@ footer {
 }
 
 .bas_de_page li:last-of-type {
-    margin-right: 50px;
+    margin-right: 3.125em;
 }
 
 .bas_de_page nav,
 .bas_de_page li {
     display: inline-block;
 }
+
 
 /* Contenu de la page  */
 
@@ -285,6 +280,7 @@ border-radius: 5%;
     display: none;
     cursor: pointer;
     z-index: 1;
+    padding-right: 20px;
 }
 
 .hamburger div {
@@ -297,7 +293,7 @@ border-radius: 5%;
 
 /* Cache la liste de navigation par défaut et affiche le menu hamburger en dessous de 1040px */
 @media (max-width: 1120px) {
-    nav ul {
+    header nav ul {
         display: none;
     }
     .hamburger {
@@ -308,6 +304,7 @@ border-radius: 5%;
 /* Style pour le menu déroulant */
 .nav-active {
     display: block;
+    text-align: center;
     position: absolute;
     background-color: white;
     top: 50px;
@@ -324,4 +321,13 @@ border-radius: 5%;
 
 .nav-active li:hover {
     background-color: #f1f1f1;
+}
+
+@media (max-width: 1400px) {
+    footer ul li, .bas_de_page ul li {
+        display: block;
+        width: 100%;
+        text-align: center;
+        font-size: 15px;
+    }
 }
