--- a/CSS/css_selection.css
+++ b/CSS/css_selection.css
@@ -108,25 +108,19 @@ nav,
     min-height: 100vh;
 }
 
-#content-wrap {
-    padding-bottom: 50px;
-}
-
-/* Styles pour le pied de page */
+/* Styles du pied de page */
 footer {
     background-color: rgb(26, 17, 0);
-    position: absolute;
     bottom: 0;
     left: 0;
     width: 100%;
     text-align: center;
-    height: 50px;
 }
 
 .bas_de_page li {
     list-style: none;
-    margin-right: 15px;
-    font-size: 14px;
+    margin-right: 0.9375em;
+    font-size: 0.875em;
     color: rgb(231, 225, 212);
 }
 
@@ -137,19 +131,15 @@ footer {
 .bas_de_page a {
     text-decoration: none;
     color: rgb(231, 225, 212);
-    font-size: 14px;
+    font-size: 0.875em;
 }
 
 .bas_de_page a:hover {
     color: rgb(208, 155, 30);
 }
 
-.bas_de_page nav, ul, li {
-    text-align: right;
-}
-
-.bas_de_page li:last-of-type{
-    margin-right: 50px;
+.bas_de_page li:last-of-type {
+    margin-right: 3.125em;
 }
 
 .bas_de_page nav,
@@ -240,6 +230,7 @@ div.produits {
 .hamburger {
     display: none;
     cursor: pointer;
+    padding-right: 20px;
 }
 
 .hamburger div {
@@ -252,7 +243,7 @@ div.produits {
 
 /* Cache la liste de navigation par défaut et affiche le menu hamburger en dessous de 1040px */
 @media (max-width: 1120px) {
-    nav ul {
+    header nav ul {
         display: none;
     }
     .hamburger {
@@ -263,6 +254,7 @@ div.produits {
 /* Style pour le menu déroulant */
 .nav-active {
     display: block;
+    text-align: center;
     position: absolute;
     background-color: white;
     top: 50px;
@@ -278,4 +270,13 @@ div.produits {
 
 .nav-active li:hover {
     background-color: #f1f1f1;
+}
+
+@media (max-width: 1400px) {
+    footer ul li, .bas_de_page ul li {
+        display: block;
+        width: 100%;
+        text-align: center;
+        font-size: 15px;
+    }
 }
