--- a/CSS/css_accueil.css
+++ b/CSS/css_accueil.css
@@ -195,27 +195,6 @@ footer {
 .bas_de_page li {
     display: inline-block;
 }
-nav ul {
-    position: relative;
-}
-
-nav ul li {
-    position: relative;
-}
-
-nav ul li ul.sous-menu {
-    display: none;
-    position: absolute;
-    left: 0;
-    top: 100%;
-    background-color: #fff; /* ou toute autre couleur de fond appropriée */
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1000;
-}
-
-nav ul li:hover ul.sous-menu {
-    display: block;
-}
 
 
 .produit_accueil {
@@ -434,32 +413,13 @@ nav ul li:hover ul.sous-menu {
 /* Réduire légèrement pour les écrans moyens */
 /* Augmentation initiale pour les écrans jusqu'à 1200px */
 /* Pour des écrans jusqu'à 1200px de large */
-@media (max-width: 1200px) {
-    html, body {
-        min-height: 110vh;  /* Augmente de 10% */
+@media (max-width: 1400px) {
+    footer ul li, .bas_de_page nav ul li {
+        display: block;
+        width: 100%;
     }
 }
 
-/* Pour des écrans jusqu'à 1000px de large */
-@media (max-width: 1000px) {
-    html, body {
-        min-height: 120vh;  /* Augmente de 20% */
-    }
-}
-
-/* Pour des écrans jusqu'à 800px de large */
-@media (max-width: 800px) {
-    html, body {
-        min-height: 130vh;  /* Augmente de 30% */
-    }
-}
-
-/* Pour des écrans jusqu'à 600px de large */
-@media (max-width: 600px) {
-    html, body {
-        min-height: 140vh;  /* Augmente de 40% */
-    }
-}
 
 
 
