--- a/CSS/css_animation.css
+++ b/CSS/css_animation.css
@@ -12,11 +12,11 @@ body {
 
 /* Réinitialisation des styles par défaut */
 html, body {
-    font-size: 14px;
-    font-family: sans-serif;
-    height: 100%;
-    width: 100%;
+    height: 100%; /* Assure que le html et body occupent au moins la hauteur totale de la fenêtre */
     margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column; /* Organise les enfants en colonne */
 }
 
 /* Styles de l'en-tête */
@@ -394,23 +394,24 @@ nav,
 
 /* Conteneur de la page et enveloppe du contenu */
 #page-container {
-    position: relative;
-    min-height: 100vh;
+    flex: 1; /* Permet au conteneur de page de prendre tout l'espace vertical disponible */
+    display: flex;
+    flex-direction: column; /* Organise les enfants du conteneur de la page en colonne */
+    min-height: 100vh; /* Assure une hauteur minimale correspondant à la hauteur de la fenêtre */
 }
 
+/* Enveloppe du contenu principale */
 #content-wrap {
-    padding-bottom: 50px;
+    flex: 1; /* Permet à l'enveloppe du contenu de grandir et de prendre tout l'espace disponible, poussant le footer vers le bas */
 }
 
-/* Styles du pied de page */
+/* Styles du pied de page pour le garder en bas */
 footer {
-    background-color: rgb(26, 17, 0);
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    text-align: center;
-    height: 50px;
+    flex-shrink: 0; /* Empêche le footer de rétrécir */
+    background-color: rgb(26, 17, 0); /* Couleur de fond du footer */
+    text-align: center; /* Centrer le texte à l'intérieur du footer */
+    width: 100%; /* Le footer prend toute la largeur de la page */
+    height: 50px; /* Hauteur fixe du footer */
 }
 
 .bas_de_page li {
@@ -488,3 +489,6 @@ footer {
 .nav-active li:hover {
     background-color: #f1f1f1;
 }
+
+
+
