--- a/CSS/css_animation.css
+++ b/CSS/css_animation.css
@@ -12,17 +12,23 @@ body {
 
 /* Réinitialisation des styles par défaut */
 html, body {
-    height: 100%; /* Assure que le html et body occupent au moins la hauteur totale de la fenêtre */
+    font-size: 14px;
+    font-family: sans-serif;
+    min-height: 100vh;
     margin: 0;
     padding: 0;
-    display: flex;
-    flex-direction: column; /* Organise les enfants en colonne */
+    height: 100%;
+    width: 100%;
+    overflow-x: hidden;
+    overflow-y: auto;
 }
+
 
 /* Styles de l'en-tête */
 header {
     background-color: rgb(255, 255, 255);
-    outline: 1px solid rgb(43, 23, 0); /* Ajout d'une bordure solide */
+    outline: 1px solid rgb(43, 23, 0);
+    box-shadow: 0px 8px 10px 10px rgba(255, 255, 255, 0.3);
 }
 
 /* Navigation en haut de la page */
@@ -86,14 +92,14 @@ nav,
 
 /* Styles du sous-menu */
 .sous-menu {
-    display: none; /* Cacher le sous-menu par défaut */
-    position: absolute; /* Position par rapport au parent */
-    top: 15px; /* Ajuster si nécessaire */
+    display: none;
+    position: absolute;
+    top: 15px;
     background-color: rgb(249, 243, 236);
     border-radius: 5%;
     padding-top: 5px;
     text-align: left;
-    z-index: 50; /* Éviter les chevauchements */
+    z-index: 50;
 }
 
 .haut_de_page li:hover .sous-menu {
@@ -185,9 +191,6 @@ nav,
     animation-delay:2.8s;
 }
 
-
-
-
 /* Four pour les patisseries */
 .test {
     position: relative;
@@ -259,7 +262,7 @@ nav,
     }
 }
 
-/*Boutons Bonbon------------------------------------------------------------------------------------*/
+/* Boutons */
 .button {
     background-color: #04AA6D;
     border: none;
@@ -299,6 +302,7 @@ nav,
     font-weight:bold;
 }
 
+/* Autres elements de l'animation */
 .totoko {
     position: absolute;
     width:6.25em;
@@ -310,7 +314,6 @@ nav,
     background-repeat: no-repeat;
 }
 
-  /* The element to apply the animation to */
 .pastry {
     position: absolute;
     z-index:3;
@@ -332,7 +335,6 @@ nav,
         transform: translateX(-300%);
     }
 }
-
 
 .muffin {
     position: absolute;
@@ -394,11 +396,10 @@ nav,
 
 /* Conteneur de la page et enveloppe du contenu */
 #page-container {
-    flex: 1; /* Permet au conteneur de page de prendre tout l'espace vertical disponible */
-    display: flex;
-    flex-direction: column; /* Organise les enfants du conteneur de la page en colonne */
-    min-height: 100vh; /* Assure une hauteur minimale correspondant à la hauteur de la fenêtre */
+    position: relative;
+    min-height: 100vh;
 }
+
 
 /* Styles du pied de page */
 footer {
@@ -471,29 +472,20 @@ footer {
     display: block;
     text-align: center;
     position: absolute;
-    background-color: white;
+    background-color: rgb(249, 243, 236);
+    padding-top: 5px;
     top: 50px;
     right: 0;
-    width: 200px;
+    width: 100%;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 100;
+    z-index: 1;
 }
 
 .nav-active li {
     text-align: center;
-    padding: 12px 16px;
+    padding: 12px;
 }
 
 .nav-active li:hover {
     background-color: #f1f1f1;
 }
-
-@media (max-width: 1400px) {
-    footer ul li, .bas_de_page ul li {
-        display: block;
-        width: 100%;
-        text-align: center;
-        font-size: 15px;
-    }
-}
-
