--- a/CSS/css_selection.css
+++ b/CSS/css_selection.css
@@ -18,7 +18,8 @@ html, body {
 /* Styles de l'en-tête */
 header {
     background-color: rgb(255, 255, 255);
-    outline: 1px solid rgb(43, 23, 0); /* Ajout d'une bordure solide */
+    outline: 1px solid rgb(43, 23, 0);
+    box-shadow: 0px 8px 10px 10px rgba(255, 255, 255, 0.3);
 }
 
 /* Navigation en haut de la page */
@@ -82,14 +83,14 @@ nav,
 
 /* Styles du sous-menu */
 .sous-menu {
-    display: none; /* Cacher le sous-menu par défaut */
-    position: absolute; /* Position par rapport au parent */
-    top: 15px; /* Ajuster si nécessaire */
+    display: none;
+    position: absolute;
+    top: 15px;
     background-color: rgb(249, 243, 236);
     border-radius: 5%;
     padding-top: 5px;
     text-align: left;
-    z-index: 50; /* Éviter les chevauchements */
+    z-index: 50;
 }
 
 .haut_de_page li:hover .sous-menu {
@@ -99,8 +100,6 @@ nav,
 .sous-menu li {
     margin: 7px;
 }
-
-
 
 /* Conteneur de la page et enveloppe du contenu */
 #page-container {
@@ -156,11 +155,15 @@ footer {
     text-align: center;
     font-family: arial;
     animation: fadeIn 2s;
+    border-radius: 4%;
 }
 
 .panneau img {
     width:95%;
-    padding-top: 2.5%;
+    margin-top: 2.5%;
+    border: 3px solid;
+    border-radius: 3%;
+    border-color: rgb(39, 26, 2);
 }
   
 .prix {
@@ -226,6 +229,7 @@ div.produits {
     margin: 6px 0;
     transition: 0.4s;
 }
+
 /* Style pour le bouton hamburger */
 .hamburger {
     display: none;
@@ -256,11 +260,13 @@ div.produits {
     display: block;
     text-align: center;
     position: absolute;
-    background-color: white;
+    background-color: rgb(249, 243, 236);
+    padding-top: 5px;
     top: 50px;
     right: 0;
-    width: 200px;
+    width: 100%;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
 }
 
 .nav-active li {
