--- a/CSS/css_formulaire_m.css
+++ b/CSS/css_formulaire_m.css
@@ -117,6 +117,8 @@ nav,
 
 div#content-wrap {
     background-image: url(https://images.pexels.com/photos/326311/pexels-photo-326311.jpeg?cs=srgb&dl=pexels-pixabay-326311.jpg&fm=jpg);
+    background-size: cover;
+    background-position: center;
 }
 
 /* Styles du pied de page */
@@ -214,7 +216,7 @@ h1 {
     color: rgb(233, 228, 214);
     background-color: rgba(44, 26, 4, 0.71);
     width: 100%;
-}*/
+}
 
 .formulaire {
     margin-top: 3%;
@@ -241,8 +243,14 @@ h1 {
     max-width: 300px;
 }
 
-.bouton{
+.formulaire button {
     cursor: pointer;
+    transition: transform 0.3s ease-in-out, opacity 0.3s ease-in-out;
+}
+
+.formulaire button:hover {
+    transform: scale(1.1);
+    opacity: 0.7;
 }
 
 fieldset {
